--- a/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.scss
+++ b/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.scss
@@ -1,23 +1,3 @@
-.signup ion-grid {
-  height: 100%;
-}
-
-.signup ion-row {
-  justify-content: center;
-}
-
-ion-content.background {
-  --background: url(../../../../assets/img/start.png) 0 0/100% 100% no-repeat;
-}
-
-.signup ion-col {
-  padding: 20px;
-  margin: 50px;
-}
-
-.signup ion-icon {
-  margin: 20px;
-}
 
 ion-item-divider {
   --background: clear;
@@ -33,7 +13,6 @@ ion-list {
 }
 
 .subscription-header {
-  //background-color:#3880ff;
   border-radius: 15px;
 }
 
@@ -80,4 +59,20 @@ ion-item-divider {
   border-radius: 15px;
   background-color: white;
   padding: 5px;
+}
+
+.right-side-align {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.center-align {
+  display: flex;
+  align-items: center;
+}
+
+ion-row {
+  display: flex;
+  justify-content: center;
 }
