--- a/src/app/components/profile-options/profile-options.component.html
+++ b/src/app/components/profile-options/profile-options.component.html
@@ -4,7 +4,7 @@
     <ion-ripple-effect></ion-ripple-effect>
   </ion-item>
   <ion-list *ngIf="clubs.length > 0">
-    <ion-item class="ion-activatable" *ngFor="let club of clubs" (click)="manageClubClicked(club.name)">
+    <ion-item class="ion-activatable" *ngFor="let club of clubs" (click)="manageClubClicked(club.clubId)">
       <ion-label>
         {{ "Manage club: " + club.name }}
       </ion-label>
