--- a/src/app/pages/club/club-list/club-list.page.html
+++ b/src/app/pages/club/club-list/club-list.page.html
@@ -1,9 +1,9 @@
 <ion-row class="ion-justify-content-around ion-margin">
   <ion-col size="7">
-    <ion-searchbar inputmode="text" animated placeholder="Search" (ionInput)="search($event)"></ion-searchbar>
+    <ion-searchbar inputmode="text" animated placeholder="Search"></ion-searchbar>
   </ion-col>
   <ion-col>
-    <ion-button class="searchButton" fill="solid" (click)="onSearchPressed()">Find Local Clubs</ion-button>
+    <ion-button class="searchButton" fill="solid">Find Local Clubs</ion-button>
   </ion-col>
 </ion-row>
 
