--- a/src/app/pages/club/club-list/club-list.page.html
+++ b/src/app/pages/club/club-list/club-list.page.html
@@ -10,12 +10,14 @@
 <ion-content>
   <ion-list *ngFor="let club of filteredClubs">
     <ion-card>
-      <ion-row class="ion-justify-content-end ion-align-self-center">
-        <ion-button class="goToClubButton">Go to club</ion-button>
-      </ion-row>
       <ion-card-header>
         <ion-card-title>{{club.name.toUpperCase()}}</ion-card-title>
-        <ion-card-subtitle>{{club.address}}</ion-card-subtitle>
+        <ion-card-subtitle>
+          <ion-row class="ion-justify-content-between">
+            <ion-text style="margin-top: 1rem"> {{club.address}} </ion-text>
+            <ion-button class="goToClubButton">Go to club</ion-button>
+          </ion-row>
+        </ion-card-subtitle>
       </ion-card-header>
       <ion-card-content> {{club.description}} </ion-card-content>
     </ion-card>
