--- a/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.html
+++ b/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.html
@@ -1,4 +1,4 @@
-<ion-grid>
+<ion-grid class="background">
   <ion-col class="ion-padding-top ion-align-self-end">
     <ion-row class="ion-justify-items-center ion-align-items-end">
       <ion-col size-xs="11">
@@ -15,10 +15,10 @@
                 <ion-item>
                   <ion-input formControlName="price" type="number" placeHolder="Price/month"> </ion-input>
                 </ion-item>
-                <div class="selecter" *ngIf="existingSubscriptions.length > 0">
+                <div class="selecter" *ngIf="clubSubscriptions.length > 0">
                   <ion-select formControlName="subscriptionReference" placeholder="Choose existing subscription">
-                    <ion-select-option *ngFor="let sub of existingSubscriptions">
-                      {{ sub.name }}
+                    <ion-select-option *ngFor="let sub of clubSubscriptions" [value]="sub.clubSubscriptionId">
+                      {{sub.name}}
                     </ion-select-option>
                   </ion-select>
                 </div>
@@ -37,29 +37,21 @@
           <div class="ion-text-center">
             <h1>Existing subscriptions</h1>
           </div>
-          <div>
-            <div class="ion-text-center" *ngIf="existingSubscriptions.length == 0">
+          <div> 
+            <div class="ion-text-center" *ngIf="clubSubscriptions.length == 0">
               <h3>No existing subscriptions</h3>
             </div>
-            <ion-list *ngIf="existingSubscriptions.length > 0">
-              <ion-card *ngFor="let subscription of existingSubscriptions">
-                <ion-grid>
-                  <ion-row>
-                    <ion-col>
-                      <ion-card-header>
-                        <ion-card-title>{{ subscription.name }}</ion-card-title>
-                      </ion-card-header>
-                    </ion-col>
-                    <ion-col size="3" class="center-align">
-                      <ion-card-header>
-                        <ion-card-subtitle>{{ subscription.price + '/month' }}</ion-card-subtitle>
-                      </ion-card-header>
-                    </ion-col>
-                    <ion-col class="ion-text-center right-side-align">
-                      <ion-button color="success">Edit</ion-button>
-                    </ion-col>
-                  </ion-row>
-                </ion-grid>
+            <ion-list class="clear-background" *ngIf="clubSubscriptions.length > 0">
+              <ion-card *ngFor="let subscription of clubSubscriptions">
+                <ion-row>
+                  <ion-button class="edit-button" color="success">Edit</ion-button>
+                </ion-row>
+                <ion-card-header>
+                  <ion-card-title>{{ subscription.name }}</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-card-subtitle>{{ subscription.price + '/month' }}</ion-card-subtitle>
+                </ion-card-content>
               </ion-card>
             </ion-list>
           </div>
