--- a/src/app/pages/club/club-manage/club-manage.page.scss
+++ b/src/app/pages/club/club-manage/club-manage.page.scss
@@ -23,3 +23,7 @@
 ion-button {
   --color: black;
 }
+
+.background {
+  --background: url(../../../../assets/img/start.png) 0 0/100% 100% no-repeat;
+}
