--- a/src/app/pages/club/club-manage/club-manage.page.html
+++ b/src/app/pages/club/club-manage/club-manage.page.html
@@ -34,12 +34,10 @@
       <div class="example-sidenav-content">
         <!-- Erstat labels med komponenter, når vi har lavet dem -->
         <ion-label *ngIf="sidebarContent==SidebarContent.club">CLUBS</ion-label>
-        <ion-label *ngIf="sidebarContent==SidebarContent.events">EVENTS</ion-label>
+        <app-club-manage-events class="content" *ngIf="sidebarContent==SidebarContent.events"></app-club-manage-events>
         <ion-label *ngIf="sidebarContent==SidebarContent.members">MEMBERS</ion-label>
         <ion-label *ngIf="sidebarContent==SidebarContent.instructors">INSTRUCTORS</ion-label>
-        <app-club-manage-subcriptions class="content" *ngIf="sidebarContent==SidebarContent.subscriptions"
-          ></app-club-manage-subcriptions
-        >
+        <app-club-manage-subcriptions class="content" *ngIf="sidebarContent==SidebarContent.subscriptions"></app-club-manage-subcriptions>
       </div>
     </ion-content>
     
