--- a/src/app/pages/club/show-club/show-club.page.html
+++ b/src/app/pages/club/show-club/show-club.page.html
@@ -1,7 +1,42 @@
 <ion-content fullscreen>
-  <ion-grid *ngIf="(club$ | async) as club">
-    <ion-row class="ion-justify-content-center ion-margin">
-      <ion-text> <h1>{{club.name}}</h1> </ion-text>
+  <ion-grid *ngIf="(club$ | async) as club" class="ion-margin">
+    <ion-row class="ion-justify-content-center headline">
+      <ion-text> <h1>{{club.name | uppercase}}</h1> </ion-text>
+    </ion-row>
+    <ion-row>
+      <ion-col size="7">
+        <ion-card>
+          <ion-card-content>
+            <ion-text>
+              <h2>{{club.description}}</h2>
+            </ion-text>
+          </ion-card-content>
+        </ion-card>
+        <ion-col> </ion-col>
+      </ion-col>
+      <ion-col size="1"> </ion-col>
+      <ion-col size="4">
+        <ion-row class="ion-justify-content-end">
+          <ion-button size="large" style="width: 60%" (click)="showModal()">Sign up</ion-button>
+        </ion-row>
+        <div class="textContainer">
+          <ion-col class="ion-text-end">
+            <ion-text><h2>Opening hours: Todo</h2></ion-text>
+          </ion-col>
+          <ion-col class="ion-text-end">
+            <ion-text><h2>Telephone: {{club.phoneNumber}}</h2></ion-text>
+          </ion-col>
+          <ion-col class="ion-text-end">
+            <ion-text><h2>Mail: todo.email.com</h2></ion-text>
+          </ion-col>
+          <ion-col class="ion-text-end">
+            <ion-text><h2>Address: {{club.address}}</h2></ion-text>
+          </ion-col>
+          <ion-col>
+            <ion-button style="width: 100%; height: 300px"> MAPS</ion-button>
+          </ion-col>
+        </div>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
