--- a/src/app/pages/club/show-club/show-club.page.html
+++ b/src/app/pages/club/show-club/show-club.page.html
@@ -1,5 +1,5 @@
 <ion-content *ngIf="!isMobile; else mobile">
-  <ion-grid *ngIf="(club$ | async) as club" class="ion-margin">
+  <ion-grid *ngIf="(club$ | async)?.clubByName as club" class="ion-margin">
     <ion-row class="ion-justify-content-center headline">
       <ion-text> <h1>{{club.name | uppercase}}</h1> </ion-text>
     </ion-row>
@@ -63,7 +63,7 @@
 
 <ng-template #mobile>
   <ion-content class="container">
-    <ion-grid *ngIf="(club$ | async) as club">
+    <ion-grid *ngIf="(club$ | async)?.clubByName as club">
       <ion-row class="ion-justify-content-center">
         <ion-col>
           <ion-text class="ion-text-center"><h2>{{club.name | uppercase}}</h2></ion-text>
