--- a/src/global.scss
+++ b/src/global.scss
@@ -25,10 +25,18 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
-@import "~ng-pick-datetime/assets/style/picker.min.css";
+@import '~ng-pick-datetime/assets/style/picker.min.css';
+
+@import '../node_modules/angular-calendar/css/angular-calendar.css';
 
 .no-scroll {
   --overflow: hidden;
+}
+
+.cal-week-view .cal-time {
+  font-size: small;
+  font-weight: normal;
+  padding-top: 0px;
 }
 
 ion-title {
