--- a/src/app/pages/event/create-event/create-event.page.scss
+++ b/src/app/pages/event/create-event/create-event.page.scss
@@ -1,5 +1,8 @@
 .rcorners {
     border-radius: 25px;
+    padding-bottom:20px;
+    padding-left: 10px;
+    padding-right: 10px;
     background: whitesmoke;
 }
     
@@ -9,9 +12,19 @@ ion-content.background {
 
 .centered ion-grid {
     height: 100%;
-    padding-top: 100px;
+    padding-top: 32px;
 }
 
 .centered ion-row {
-    justify-content: center;
+    justify-content: space-evenly;
+}  
+
+.column-padding {
+    padding-left:20px;
+    padding-right:20px;
+}
+
+ion-item-divider {
+    --background: clear;
+    --color: black;
 }
