--- a/src/app/components/event-calendar/event-calendar.component.html
+++ b/src/app/components/event-calendar/event-calendar.component.html
@@ -51,7 +51,7 @@
 </div>
 
 <div [ngSwitch]="view" class="cal-view">
-  <mwl-calendar-month-view [refresh]="refresh" (eventTimesChanged)="eventTimesChanged($event)" *ngSwitchCase="CalendarView.Month" [viewDate]="viewDate" [events]="events"></mwl-calendar-month-view>
+  <mwl-calendar-month-view (dayClicked)="onDayClicked($event.day)" [refresh]="refresh" (eventTimesChanged)="eventTimesChanged($event)" *ngSwitchCase="CalendarView.Month" [viewDate]="viewDate" [events]="events"></mwl-calendar-month-view>
   <mwl-calendar-week-view [refresh]="refresh" (eventTimesChanged)="eventTimesChanged($event)" [hourSegmentHeight]="10" *ngSwitchCase="CalendarView.Week" [viewDate]="viewDate" [events]="events"></mwl-calendar-week-view>
   <mwl-calendar-day-view [refresh]="refresh" (eventTimesChanged)="eventTimesChanged($event)" [hourSegmentHeight]="10" *ngSwitchCase="CalendarView.Day" [viewDate]="viewDate" [events]="events"></mwl-calendar-day-view>
 </div>
