--- a/src/app/components/club-manage/club-manage-events/club-manage-events.component.html
+++ b/src/app/components/club-manage/club-manage-events/club-manage-events.component.html
@@ -1,27 +1,48 @@
 <ion-grid>
   <ion-row>
     <ion-col class="calendar-col">
-      <app-event-calendar (dayClicked)="dayClicked($event.events)" [events]="events" [viewDate]="viewDate"></app-event-calendar>
+      <app-event-calendar (dayClicked)="dayClicked($event.date, $event.events)" [events]="events" [viewDate]="viewDate"></app-event-calendar>
     </ion-col>
-    <ion-col class="right-col">
+    <ion-col size="5.5" class="right-col">
       <ion-row class="centered-row">
         <ion-button (click)="onCreateClicked()">
           Create Event
         </ion-button>
       </ion-row>
       <ion-row class="centered-row">
-        <ion-list *ngFor="let event of eventsForChosenDate">
-          <ion-card (click)="cardClicked(event)">
-            <ion-card-content>
-              <ion-card-header>{{event.title}}</ion-card-header>
-            </ion-card-content>
-          </ion-card>
-        </ion-list>
+        <div *ngIf="selectedDate != null">
+          <ion-label>Showing events for {{selectedDate.toDateString()}} - select an event to show details</ion-label>
+        </div>
+        <div *ngIf="selectedDate == null">
+          <ion-label>Select a date to show events</ion-label>
+        </div>
+        <div *ngIf="eventsForChosenDate.length > 0" class="rcorners">
+          <div class="scrollable-content">
+            <ion-list>
+              <ion-item class="ion-activatable ripple-parent" (click)="cardClicked(event)" *ngFor="let event of eventsForChosenDate">
+                <ion-label>{{event.title}}</ion-label>
+                <ion-ripple-effect></ion-ripple-effect>
+              </ion-item>
+            </ion-list>
+          </div>
+        </div>
       </ion-row>
       <ion-row class="centered-row">
+        <div *ngIf="selectedEvent != null" style="padding-top: 10px; max-width: 90%;">
+          <ion-label>Showing event {{selectedEvent.title}} - click to go to event page</ion-label>
+        </div>
         <ion-card *ngIf="selectedEvent != null">
-          <label>{{selectedEvent.title}}</label>
-          <label>{{selectedEvent.start}}</label>
+            <ion-card-header>
+              <ion-card-title>{{selectedEvent.title}}</ion-card-title>
+              <ion-card-subtitle>{{"Starttime: " + createTimeString(selectedEvent.start)}}</ion-card-subtitle>
+              <ion-card-subtitle>{{"Endtime: " + createTimeString(selectedEvent.end)}}</ion-card-subtitle>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-card-subtitle>
+                Event description:
+              </ion-card-subtitle>
+              {{selectedEvent.description}}
+            </ion-card-content>
         </ion-card>
       </ion-row>
     </ion-col>
