--- a/src/app/components/club-manage/club-manage-events/club-manage-events.component.scss
+++ b/src/app/components/club-manage/club-manage-events/club-manage-events.component.scss
@@ -8,9 +8,26 @@
 }
 
 .right-col {
-    padding-top: 50px;
+    padding-top: 63px;
 }
 
 .centered-row {
     justify-content: center;
+}
+
+.scrollable-content {
+    max-height: 300px;
+    display:block !important;
+    overflow-y:scroll !important;
+}
+
+ion-card {
+    width: -webkit-fill-available;
+}
+
+.rcorners {
+    border-radius: 25px;
+    padding: 30px;
+    background: whitesmoke;
+    width: 95%;
 }
