--- a/src/app/pages/club/club-manage/club-manage.page.scss
+++ b/src/app/pages/club/club-manage/club-manage.page.scss
@@ -16,8 +16,13 @@
   padding: 20px;
 }
 
-.content {
+.sub-content {
   height: 100%;
+}
+
+.event-content {
+  height:100%;
+  width:100%;
 }
 
 ion-button {
