--- a/src/app/components/club-manage/club-manage-events/club-manage-events.component.html
+++ b/src/app/components/club-manage/club-manage-events/club-manage-events.component.html
@@ -29,7 +29,7 @@
       </ion-row>
       <ion-row class="centered-row">
         <div *ngIf="selectedEvent != null" style="padding-top: 10px; max-width: 90%;">
-          <ion-label>Showing event {{selectedEvent.title}} - click to go to event page</ion-label>
+          <ion-label>Showing event details - click to go to event page</ion-label>
         </div>
         <ion-card *ngIf="selectedEvent != null">
             <ion-card-header>
