--- a/src/app/pages/club/show-club/show-club.page.html
+++ b/src/app/pages/club/show-club/show-club.page.html
@@ -1,128 +1,146 @@
 <ion-content *ngIf="!isMobile; else mobile">
-  <ion-grid *ngIf="(club$ | async)?.clubByName as club" class="ion-margin">
-    <ion-row class="ion-justify-content-center headline">
-      <ion-text> <h1>{{club.name | uppercase}}</h1> </ion-text>
-    </ion-row>
-    <ion-row>
-      <ion-col size="7">
-        <ion-row class="ion-justify-content-center">
-          <ion-card style="width: 100%">
-            <ion-card-header>
-              <ion-card-title>Description of club</ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              <ion-card-subtitle>{{club.description}}</ion-card-subtitle>
-            </ion-card-content>
-          </ion-card>
-          <ion-list class="list" inset="true" lines="none">
-            <ion-list-header>
-              <p>Subscriptions in the club</p>
-            </ion-list-header>
-            <hr style="height: 1px; background-color: black; width: 90%" />
-            <ion-item class="substyle ion-justify-content-evenly" *ngFor=" let sup of club.clubsubscription">
-              <ion-grid>
-                <ion-card>
-                  <ion-card-header>
-                    <ion-row class="ion-justify-content-between">
-                      <ion-text>{{sup.name}}</ion-text>
-                      <ion-text>{{sup.price}} $</ion-text>
-                    </ion-row>
-                  </ion-card-header>
-                </ion-card>
-              </ion-grid>
-            </ion-item>
-          </ion-list>
+    <ion-grid *ngIf="(club$ | async)?.clubByName as club" class="ion-margin">
+        <ion-row class="ion-justify-content-center headline">
+            <ion-text>
+                <h1>{{club.name | uppercase}}</h1>
+            </ion-text>
         </ion-row>
-      </ion-col>
-      <ion-col size="1"> </ion-col>
-      <ion-col size="4">
-        <ion-row class="ion-justify-content-end">
-          <ion-button *ngIf="currentSubscription else isNotMember" [disabled]="true" size="large" style="width: 60%"
-            >You are signed up</ion-button
-          >
-          <ng-template #isNotMember>
-            <ion-button size="large" style="width: 60%" (click)="showModal()">Sign up</ion-button>
-          </ng-template>
+        <ion-row>
+            <ion-col size="7">
+                <ion-row class="ion-justify-content-center">
+                    <ion-card style="width: 100%">
+                        <ion-card-header>
+                            <ion-card-title>Description of club</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                            <ion-card-subtitle>{{club.description}}</ion-card-subtitle>
+                        </ion-card-content>
+                    </ion-card>
+                    <ion-list class="list" inset="true" lines="none">
+                        <ion-list-header>
+                            <p>Subscriptions in the club</p>
+                        </ion-list-header>
+                        <hr style="height: 1px; background-color: black; width: 90%" />
+                        <ion-item class="substyle ion-justify-content-evenly" *ngFor=" let sup of club.clubsubscription">
+                            <ion-grid>
+                                <ion-card>
+                                    <ion-card-header>
+                                        <ion-row class="ion-justify-content-between">
+                                            <ion-text>{{sup.name}}</ion-text>
+                                            <ion-text>{{sup.price}} $</ion-text>
+                                        </ion-row>
+                                    </ion-card-header>
+                                </ion-card>
+                            </ion-grid>
+                        </ion-item>
+                    </ion-list>
+                </ion-row>
+            </ion-col>
+            <ion-col size="1"> </ion-col>
+            <ion-col size="4">
+                <ion-row class="ion-justify-content-end">
+                    <ion-button *ngIf="currentSubscription else isNotMember" [disabled]="true" size="large" style="width: 60%">You are signed up</ion-button>
+                    <ng-template #isNotMember>
+                        <ion-button size="large" style="width: 60%" (click)="showModal()">Sign up</ion-button>
+                    </ng-template>
+                </ion-row>
+                <div class="textContainer">
+                    <ion-col class="ion-text-end">
+                        <ion-text>
+                            <h2>Opening hours: Todo</h2>
+                        </ion-text>
+                    </ion-col>
+                    <ion-col class="ion-text-end">
+                        <ion-text>
+                            <h2>Telephone: {{club.phoneNumber}}</h2>
+                        </ion-text>
+                    </ion-col>
+                    <ion-col class="ion-text-end">
+                        <ion-text>
+                            <h2>Mail: todo.email.com</h2>
+                        </ion-text>
+                    </ion-col>
+                    <ion-col class="ion-text-end">
+                        <ion-text>
+                            <h2>Address: {{club.address}}</h2>
+                        </ion-text>
+                    </ion-col>
+                    <ion-col>
+                        <ion-button style="width: 100%; height: 300px"> MAPS</ion-button>
+                    </ion-col>
+                </div>
+            </ion-col>
         </ion-row>
-        <div class="textContainer">
-          <ion-col class="ion-text-end">
-            <ion-text><h2>Opening hours: Todo</h2></ion-text>
-          </ion-col>
-          <ion-col class="ion-text-end">
-            <ion-text><h2>Telephone: {{club.phoneNumber}}</h2></ion-text>
-          </ion-col>
-          <ion-col class="ion-text-end">
-            <ion-text><h2>Mail: todo.email.com</h2></ion-text>
-          </ion-col>
-          <ion-col class="ion-text-end">
-            <ion-text><h2>Address: {{club.address}}</h2></ion-text>
-          </ion-col>
-          <ion-col>
-            <ion-button style="width: 100%; height: 300px"> MAPS</ion-button>
-          </ion-col>
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    </ion-grid>
 </ion-content>
 
-<ng-template #mobile *ngIf="(club$ | async)?.clubByName as club">
-  <ion-content class="container">
-    <ion-grid>
-      <ion-row class="ion-justify-content-center">
-        <ion-col>
-          <ion-text class="ion-text-center"><h2>{{club.name | uppercase}}</h2></ion-text>
-        </ion-col>
-      </ion-row>
-      <ion-card>
-        <ion-card-header>
-          <ion-text style="color: black"> {{club.description}} </ion-text>
-        </ion-card-header>
-      </ion-card>
-      <ion-row class="ion-justify-content-center">
-        <ion-list class="list" inset="true" lines="none">
-          <ion-list-header>
-            <p>Subscriptions in the club</p>
-          </ion-list-header>
-          <hr style="height: 1px; background-color: black; width: 90%" />
-          <ion-item class="substyle ion-justify-content-evenly" *ngFor=" let sup of club.clubsubscription">
-            <ion-grid>
-              <ion-row class="ion-justify-content-between">
-                <ion-text>{{sup.name}}</ion-text>
-                <ion-text>{{sup.price}} $</ion-text>
-              </ion-row>
-            </ion-grid>
-          </ion-item>
-        </ion-list>
-      </ion-row>
-      <ion-card>
-        <ion-card-content>
-          <ion-row class="ion-justify-content-center">
-            <div class="textContainer">
-              <ion-col class="ion-text-end">
-                <ion-text><p>Opening hours: Todo</p></ion-text>
-              </ion-col>
-              <ion-col class="ion-text-end">
-                <ion-text><p>Telephone: {{club.phoneNumber}}</p></ion-text>
-              </ion-col>
-              <ion-col class="ion-text-end">
-                <ion-text><p>Mail: {{club.user.email}}</p></ion-text>
-              </ion-col>
-              <ion-col class="ion-text-end">
-                <ion-text><p>Address: {{club.address}}</p></ion-text>
-              </ion-col>
-            </div>
-          </ion-row>
-        </ion-card-content>
-      </ion-card>
-      <ion-col>
-        <ion-button style="width: 100%; height: 300px"> MAPS</ion-button>
-      </ion-col>
-    </ion-grid>
-  </ion-content>
-  <div class="ion-padding singup-mobile">
-    <ion-row class="ion-justify-content-center">
-      <ion-button class="signup-button-mobile" (click)="showModal()">Sign up</ion-button>
-    </ion-row>
-  </div>
+<ng-template #mobile>
+    <ion-content class="container" *ngIf="(club$ | async)?.clubByName as club">
+        <ion-grid>
+            <ion-row class="ion-justify-content-center">
+                <ion-col>
+                    <ion-text class="ion-text-center">
+                        <h2>{{club.name | uppercase}}</h2>
+                    </ion-text>
+                </ion-col>
+            </ion-row>
+            <ion-card>
+                <ion-card-header>
+                    <ion-text style="color: black"> {{club.description}} </ion-text>
+                </ion-card-header>
+            </ion-card>
+            <ion-row class="ion-justify-content-center">
+                <ion-list class="list" inset="true" lines="none">
+                    <ion-list-header>
+                        <p>Subscriptions in the club</p>
+                    </ion-list-header>
+                    <hr style="height: 1px; background-color: black; width: 90%" />
+                    <ion-item class="substyle ion-justify-content-evenly" *ngFor=" let sup of club.clubsubscription">
+                        <ion-grid>
+                            <ion-row class="ion-justify-content-between">
+                                <ion-text>{{sup.name}}</ion-text>
+                                <ion-text>{{sup.price}} $</ion-text>
+                            </ion-row>
+                        </ion-grid>
+                    </ion-item>
+                </ion-list>
+            </ion-row>
+            <ion-card>
+                <ion-card-content>
+                    <ion-row class="ion-justify-content-center">
+                        <div class="textContainer">
+                            <ion-col class="ion-text-end">
+                                <ion-text>
+                                    <p>Opening hours: Todo</p>
+                                </ion-text>
+                            </ion-col>
+                            <ion-col class="ion-text-end">
+                                <ion-text>
+                                    <p>Telephone: {{club.phoneNumber}}</p>
+                                </ion-text>
+                            </ion-col>
+                            <ion-col class="ion-text-end">
+                                <ion-text>
+                                    <p>Mail: {{club.user.email}}</p>
+                                </ion-text>
+                            </ion-col>
+                            <ion-col class="ion-text-end">
+                                <ion-text>
+                                    <p>Address: {{club.address}}</p>
+                                </ion-text>
+                            </ion-col>
+                        </div>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+            <ion-col>
+                <ion-button style="width: 100%; height: 300px"> MAPS</ion-button>
+            </ion-col>
+        </ion-grid>
+    </ion-content>
+    <div class="ion-padding singup-mobile">
+        <ion-row class="ion-justify-content-center">
+            <ion-button class="signup-button-mobile" (click)="showModal()">Sign up</ion-button>
+        </ion-row>
+    </div>
 </ng-template>
