--- a/src/app/pages/club/club-manage/club-manage.page.html
+++ b/src/app/pages/club/club-manage/club-manage.page.html
@@ -33,9 +33,9 @@
     <ion-content class="background">
       <div class="example-sidenav-content">
         <!-- Erstat labels med komponenter, når vi har lavet dem -->
+        <app-club-manage-members *ngIf="sidebarContent==SidebarContent.members" class="member-content"></app-club-manage-members>
         <ion-label *ngIf="sidebarContent==SidebarContent.club">CLUBS</ion-label>
         <ion-label *ngIf="sidebarContent==SidebarContent.events">EVENTS</ion-label>
-        <ion-label *ngIf="sidebarContent==SidebarContent.members">MEMBERS</ion-label>
         <ion-label *ngIf="sidebarContent==SidebarContent.instructors">INSTRUCTORS</ion-label>
         <app-club-manage-subcriptions class="content" *ngIf="sidebarContent==SidebarContent.subscriptions"
           ></app-club-manage-subcriptions
