--- a/src/app/pages/club/show-club/show-club.page.scss
+++ b/src/app/pages/club/show-club/show-club.page.scss
@@ -14,6 +14,11 @@ h1 {
     color: black;
 }
 
+.signUpButton {
+    width: 60%;
+    --background: #70ad47;
+}
+
 .container {
     --background: transparent;
 }
