--- a/src/app/pages/club/club-create/club-create.page.scss
+++ b/src/app/pages/club/club-create/club-create.page.scss
@@ -7,7 +7,7 @@
 }
   
 ion-content.background {
---background: url(../../../../assets/img/start.png) 0 0/100% 100% no-repeat;
+    --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
 }
 
 .signup ion-col {
