--- a/src/app/pages/club/club-manage/club-manage.page.scss
+++ b/src/app/pages/club/club-manage/club-manage.page.scss
@@ -30,5 +30,5 @@ ion-button {
 }
 
 .background {
-  --background: url(../../../../assets/img/start.png) 0 0/100% 100% no-repeat;
+  --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
 }
