--- a/src/global.scss
+++ b/src/global.scss
@@ -25,8 +25,18 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
+@import '~ng-pick-datetime/assets/style/picker.min.css';
+
+@import '../node_modules/angular-calendar/css/angular-calendar.css';
+
 .no-scroll {
   --overflow: hidden;
+}
+
+.cal-week-view .cal-time {
+  font-size: small;
+  font-weight: normal;
+  padding-top: 0px;
 }
 
 ion-title {
@@ -37,4 +47,9 @@ ion-title {
 
 .center {
   text-align: center;
+}
+
+//Needs to be here, because the modal is in global scope
+.modal-popup {
+  --border-radius: 20px;
 }
