--- a/src/app/pages/club/club-manage/club-manage.page.scss
+++ b/src/app/pages/club/club-manage/club-manage.page.scss
@@ -20,6 +20,11 @@
   height: 100%;
 }
 
+.member-content {
+  height: 100%;
+  width: 100%;
+}
+
 .event-content {
   height:100%;
   width:100%;
@@ -30,5 +35,5 @@ ion-button {
 }
 
 .background {
-  --background: url(../../../../assets/img/start.png) 0 0/100% 100% no-repeat;
+  --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
 }
