Fixed some stuff

--- a/src/app/pages/event/create-event/create-event.page.scss
+++ b/src/app/pages/event/create-event/create-event.page.scss
@@ -5,7 +5,7 @@
 }
     
 ion-content.background {
-    --background: url(../../../../assets/img/start.png) 0 0/100% 100% no-repeat;
+    --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
 }
 
 .centered ion-grid {
