--- a/src/app/pages/club/show-club/show-club.page.html
+++ b/src/app/pages/club/show-club/show-club.page.html
@@ -34,19 +34,19 @@
                             </ion-grid>
                         </ion-item>
                     </ion-list>
-                    <ion-list class="list" inset="true" lines="none">
+                    <ion-list class="list" inset="true" lines="none" *ngIf="(club$ | async)?.eventsForClub as events">
                         <ion-list-header>
                             <p>Upcoming events in the club</p>
                         </ion-list-header>
                         <hr style="height: 1px; background-color: black; width: 90%" />
-                        <ion-item class="substyle ion-justify-content-evenly" *ngFor=" let sup of club.clubsubscription">
+                        <ion-item class="substyle ion-justify-content-evenly" *ngFor=" let event of events; index as i">
                             <!-- Skal ikke være det her, men nogle få event-->
                             <ion-grid>
                                 <ion-card>
                                     <ion-card-header>
                                         <ion-row class="ion-justify-content-between">
-                                            <ion-text>EVENT NAME</ion-text>
-                                            <ion-text>EVENT PRICE $</ion-text>
+                                            <ion-text>{{event.name}}</ion-text>
+                                            <ion-text>{{getEventPrice(i)}} $</ion-text>
                                         </ion-row>
                                     </ion-card-header>
                                 </ion-card>
